# CSV-fuzzy-search

./: companies.csv  docker-compose.yaml  entities.json
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/db/: crud.py  dbConnection.py  models.py  schemas.py
backend/src/routes/: csv.py
backend/src/utils/: matching.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  CsvTable.tsx  DetailsPanel.tsx  FileUpload.tsx  companiesMatchesTable.tsx
frontend/src/Api/: useApi.tsx
frontend/src/Interfaces/: interfaces.ts
